Fix overflowing mobile text

--- a/assets/css/core.scss
+++ b/assets/css/core.scss
@@ -125,6 +125,10 @@ h1 small {
 	#instructions {
 		width: 100%;
 		text-align: center;
+		left: 0;
+	}
+	#instructions p {
+		padding: 0 12px;
 	}
 }
 
